# pypi-aminapickle

./: .gitignore  CLAUDE.md  LICENSE  README.txt  docker.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.txt  attestations.txt  ci.txt  diff.txt  orchestration.txt  pypi-client.txt  repo-clone.txt  report.txt  requirements-parser.txt  sdist-extraction.txt  source-resolution.txt
examples/: README.txt  requirements.txt
src/pypi_aminapickle/: attestations.py  cli.py  diff.py  digests.py  errors.py  pypi.py  repo.py  report.py  requirements.py  sdist.py  source.py  verify.py  workspace.py
src/srcverify/: __init__.py  attestations.py  cli.py  diff.py  errors.py  pypi.py  repo.py  report.py  requirements.py  sdist.py  source.py  verify.py  workspace.py
tests/: test_attestations.py  test_cli.py  test_diff.py  test_digests.py  test_integration.py  test_pypi.py  test_repo.py  test_report.py  test_requirements.py  test_sdist.py  test_source.py  test_verify.py  test_workspace.py
tests/fixtures/: provenance_cryptography_44.0.0.json
